--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,30 @@ header {
   width: 250px;
   padding: 0 10px;
 }
+
+.userinfo-content {
+  width: 100%;
+  text-align: center;
+}
+
+.userinfo-content img {
+  width: 200px;
+  height: 200px;
+}
+.userinfo-data-content {
+  margin-top: 50px;
+}
+.userinfo-data-content p {
+  display: flex;
+  padding-right: 50px;
+}
+.userinfo-data-content p :first-child {
+  flex: 1;
+  text-align: right;
+  padding-right: 30px;
+}
+.userinfo-data-content p :last-child {
+  flex: 1;
+  text-align: left;
+  padding-left: 30px;
+}
