--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+html {
+  min-width: 400px;
+}
 header {
   text-align: center;
+  /* margin-top: 50px; */
 }
 
 .page-content {
@@ -8,14 +12,29 @@ header {
   overflow: auto;
 }
 
+.headlogo-content {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  margin: 50px 0;
+}
+
 .login-content {
   text-align: center;
+  border: 1px solid #a9a9a9;
+  border-radius: 8px;
+  padding: 15px;
 }
 
 button {
-  height: 40px;
+  height: 35px;
   width: 90px;
   margin: 0 6px;
+  color: white;
+  font-weight: 600;
+  background-color: #ff5160;
+  border: 0;
+  border-radius: 4px;
 }
 
 .login-block {
@@ -26,10 +45,12 @@ button {
 }
 
 .login-block input {
-  height: 30px;
+  height: 40px;
   width: 250px;
   padding: 0 10px;
   margin: 0 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 .userinfo-content {
