--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@ html {
 }
 header {
   text-align: center;
-  /* margin-top: 50px; */
 }
 
 .page-content {
@@ -19,6 +18,24 @@ header {
   margin: 50px 0;
 }
 
+.main-header {
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 2rem;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  z-index: 1000;
+  background-color: white;
+}
+
+.main-header img {
+  height: 16px;
+}
+
 .login-content {
   text-align: center;
   border: 1px solid #a9a9a9;
@@ -28,13 +45,17 @@ header {
 
 button {
   height: 35px;
-  width: 90px;
-  margin: 0 6px;
+  width: -webkit-fill-available;
+  /* margin: 0 6px; */
   color: white;
-  font-weight: 600;
+  font-weight: 700;
   background-color: #ff5160;
   border: 0;
   border-radius: 4px;
+  cursor: pointer;
+}
+button:hover {
+  opacity: 0.8;
 }
 
 .login-block {
@@ -48,9 +69,23 @@ button {
   height: 40px;
   width: 250px;
   padding: 0 10px;
-  margin: 0 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+input:focus {
+  outline: none !important;
+  border: 1.5px solid #ff5160;
+}
+
+.timer-block {
+  justify-content: right;
+  margin: 0 20px !important;
+}
+.timer-span {
+  font-size: 12px;
+  /* color: gray; */
+  opacity: 0.5;
 }
 
 .userinfo-content {
@@ -67,7 +102,6 @@ button {
 }
 .userinfo-data-content p {
   display: flex;
-  /* padding-right: 50px; */
 }
 .userinfo-data-content p :first-child {
   flex: 1;
@@ -78,4 +112,29 @@ button {
   flex: 1;
   text-align: left;
   padding-left: 30px;
+}
+
+.pad-header-page {
+  /* padding: 4rem; */
+  height: 4rem;
+  margin-bottom: 3rem;
+}
+
+.error-message {
+  height: 1rem;
+  text-align: left;
+  margin: 0 20px;
+}
+
+.error-message span {
+  color: #ff003e;
+  /* color: #ff5160; */
+  font-size: 12px;
+}
+
+.m-l-5 {
+  margin-left: 5px;
+}
+.m-r-5 {
+  margin-right: 5px;
 }
