--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,6 @@ header {
 button {
   height: 35px;
   width: -webkit-fill-available;
-  /* margin: 0 6px; */
   color: white;
   font-weight: 700;
   background-color: #ff5160;
@@ -56,7 +55,7 @@ button {
   cursor: pointer;
 }
 button:hover {
-  opacity: 0.8;
+  filter: brightness(85%);
 }
 
 .login-block {
@@ -85,7 +84,6 @@ input:focus {
 }
 .timer-span {
   font-size: 12px;
-  /* color: gray; */
   opacity: 0.5;
 }
 
@@ -95,12 +93,11 @@ input:focus {
   text-align: center;
   border: 1px solid #a9a9a9;
   border-radius: 8px;
-  /* padding: 15px; */
 }
 
 .userinfo-content img {
-  /* width: 300px;
-  height: 300px; */
+  width: 400px;
+  height: 400px;
   border-radius: 7px 7px 0 0;
 }
 .userinfo-data-content {
@@ -133,7 +130,6 @@ input:focus {
 }
 
 .pad-header-page {
-  /* padding: 4rem; */
   height: 4rem;
   margin-bottom: 3rem;
 }
